--- a/packages/playwright-core/src/protocol/protocol.yml
+++ b/packages/playwright-core/src/protocol/protocol.yml
@@ -498,7 +498,7 @@ LocalUtils:
         headers:
           type: array
           items: NameValue
-        postData: string?
+        postData: binary?
         isNavigationRequest: boolean
       returns:
         action:
@@ -514,7 +514,7 @@ LocalUtils:
         headers:
           type: array?
           items: NameValue
-        body: string?
+        body: binary?
 
     harClose:
       parameters:
