--- a/packages/playwright-ct-vue2/package.json
+++ b/packages/playwright-ct-vue2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@playwright/experimental-ct-vue2",
-  "version": "1.23.0-next",
+  "version": "1.23.0",
   "description": "Playwright Component Testing for Vue2",
   "repository": "github:Microsoft/playwright",
   "homepage": "https://playwright.dev",
@@ -22,7 +22,7 @@
     }
   },
   "dependencies": {
-    "@playwright/test": "1.23.0-next",
+    "@playwright/test": "1.23.0",
     "vite": "^2.9.5",
     "vite-plugin-vue2": "^2.0.1"
   },
