feat(har): allow storing content as separate files

--- a/packages/playwright-core/src/protocol/protocol.yml
+++ b/packages/playwright-core/src/protocol/protocol.yml
@@ -224,8 +224,13 @@ SerializedError:
 RecordHarOptions:
   type: object
   properties:
-    omitContent: boolean?
     path: string
+    content:
+      type: enum
+      literals:
+      - embed
+      - attach
+      - omit
     urlGlob: string?
     urlRegexSource: string?
     urlRegexFlags: string?
