chore(har): attach resources for .zip hars

--- a/packages/playwright-core/src/protocol/protocol.yml
+++ b/packages/playwright-core/src/protocol/protocol.yml
@@ -226,7 +226,7 @@ RecordHarOptions:
   properties:
     path: string
     content:
-      type: enum
+      type: enum?
       literals:
       - embed
       - attach
