chore: allow routing by uncompressed har

--- a/packages/playwright-core/src/protocol/protocol.yml
+++ b/packages/playwright-core/src/protocol/protocol.yml
@@ -482,7 +482,8 @@ LocalUtils:
       parameters:
         file: string
       returns:
-        harId: string
+        harId: string?
+        error: string?
 
     harLookup:
       parameters:
