chore: disambiguate by post data

--- a/packages/playwright-core/src/protocol/protocol.yml
+++ b/packages/playwright-core/src/protocol/protocol.yml
@@ -490,6 +490,10 @@ LocalUtils:
         harId: string
         url: string
         method: string
+        headers:
+          type: array
+          items: NameValue
+        postData: string?
         isNavigationRequest: boolean
       returns:
         action:
@@ -506,7 +510,6 @@ LocalUtils:
           type: array?
           items: NameValue
         body: string?
-        base64Encoded: boolean?
 
     harClose:
       parameters:
