cherry-pick(#15000): fix(har): internal redirect in renderer-initiated navigations

--- a/packages/playwright-core/src/protocol/protocol.yml
+++ b/packages/playwright-core/src/protocol/protocol.yml
@@ -2491,10 +2491,13 @@ Route:
 
   commands:
 
+    redirectNavigationRequest:
+      parameters:
+        url: string
+
     abort:
       parameters:
         errorCode: string?
-        redirectAbortedNavigationToUrl: string?
 
     continue:
       parameters:
