feat(har): introduce the slim mode

--- a/packages/playwright-core/src/protocol/protocol.yml
+++ b/packages/playwright-core/src/protocol/protocol.yml
@@ -231,6 +231,11 @@ RecordHarOptions:
       - embed
       - attach
       - omit
+    mode:
+      type: enum?
+      literals:
+      - full
+      - minimal
     urlGlob: string?
     urlRegexSource: string?
     urlRegexFlags: string?
