devops: use Android SDK 33 instead of 32

--- a/.github/workflows/tests_android.yml
+++ b/.github/workflows/tests_android.yml
@@ -11,7 +11,7 @@ on:
       - release-*
     paths:
       - "**android**"
-      - "utils/avd_*.js"
+      - "utils/avd_*"
       - ".github/workflows/tests_android.yml"
 
 env:
