chore: routeFromHAR should use attach method

--- a/packages/playwright-core/src/protocol/protocol.yml
+++ b/packages/playwright-core/src/protocol/protocol.yml
@@ -520,6 +520,11 @@ LocalUtils:
       parameters:
         harId: string
 
+    harUnzip:
+      parameters:
+        zipFile: string
+        harFile: string
+
 Root:
   type: interface
 
