--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@vitejs/plugin-react": "^1.3.2",
     "@zip.js/zip.js": "^2.4.2",
     "ansi-to-html": "^0.7.2",
+    "azure-devops-node-api": "^11.1.1",
     "chokidar": "^3.5.3",
     "colors": "^1.4.0",
     "commonmark": "^0.30.0",
@@ -81,6 +82,7 @@
     "license-checker": "^25.0.1",
     "mime": "^3.0.0",
     "ncp": "^2.0.0",
+    "nock": "^13.2.7",
     "node-stream-zip": "^1.15.0",
     "proxy": "^1.0.2",
     "react": "^18.1.0",
