Squashed commit of the following:
commit 0ed3d328a272f6ea578347a05ea32e4d114bf97b
Author: Ross A. Wollman <ross.wollman@gmail.com>
Date:   Fri Jul 1 10:55:53 2022 -0700

    skip select tests until after roll

commit e4de45c8589d110287780a7e63efb277d485e3af
Merge: 5cbcfe96e b86926e69
Author: Ross A. Wollman <ross.wollman@gmail.com>
Date:   Thu Jun 30 17:27:00 2022 -0700

    Merge branch 'main' into feat/sw-chunked

commit 5cbcfe96eee6b0f66f789c5b6427f19f30a8ed3d
Author: Ross A. Wollman <ross.wollman@gmail.com>
Date:   Tue Jun 28 12:50:15 2022 -0700

    lint

commit 7e2d70b7f0d51175ec4e6bd61a35fd433b834630
Author: Ross A. Wollman <ross.wollman@gmail.com>
Date:   Tue Jun 28 12:23:22 2022 -0700

    clean up more tests

commit 403e2f328e93855abaefab83ceb828a6add2ada9
Author: Ross A. Wollman <ross.wollman@gmail.com>
Date:   Tue Jun 28 12:09:41 2022 -0700

    remove skips

commit f72f811d4876cfd76a72fce2f340343678cdfc12
Author: Ross A. Wollman <ross.wollman@gmail.com>
Date:   Mon Jun 27 22:49:25 2022 -0700

    fix indentation from conflict resolution

commit c3afbb20e0e684d70da89a72de998c2257a5685a
Author: Ross A. Wollman <ross.wollman@gmail.com>
Date:   Mon Jun 27 22:45:28 2022 -0700

    lint

commit a17e73c634010b8e8ccf2b72344a0cf830931e84
Merge: 7cb20b915 43a621e97
Author: Ross A. Wollman <ross.wollman@gmail.com>
Date:   Mon Jun 27 22:36:59 2022 -0700

    Merge branch 'main' into feat/sw-chunked

commit 7cb20b91527410a380c322068a41b6839157b5ec
Merge: a29f898bd 0f8114f6a
Author: Ross Wollman <rwoll@users.noreply.github.com>
Date:   Mon Jun 20 19:49:19 2022 -0700

    Merge branch 'main' into feat/sw-chunked

commit a29f898bdb5f13dc6b21b78be8a858a92840a041
Author: Ross A. Wollman <ross.wollman@gmail.com>
Date:   Tue Jun 14 10:54:23 2022 -0700

    fix tests post merge

commit 42c7d9d7daf52cfb27477f09d2067a4c5d88217c
Merge: 4eeca70ae 4f1ab2fa6
Author: Ross Wollman <rwoll@users.noreply.github.com>
Date:   Tue Jun 14 09:32:59 2022 -0700

    Merge branch 'main' into 

--- a/packages/playwright-core/src/protocol/protocol.yml
+++ b/packages/playwright-core/src/protocol/protocol.yml
@@ -2478,7 +2478,8 @@ Request:
   type: interface
 
   initializer:
-    frame: Frame
+    frame: Frame?
+    serviceWorker: Worker?
     url: string
     resourceType: string
     method: string
@@ -2537,7 +2538,6 @@ Route:
         body: string?
         isBase64: boolean?
         fetchResponseUid: string?
-
 
 ResourceTiming:
   type: object
