--- a/packages/playwright-ct-svelte/package.json
+++ b/packages/playwright-ct-svelte/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@playwright/experimental-ct-svelte",
-  "version": "1.24.0-next",
+  "version": "1.24.0",
   "description": "Playwright Component Testing for Svelte",
   "repository": "github:Microsoft/playwright",
   "homepage": "https://playwright.dev",
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
-    "@playwright/test": "1.24.0-next",
+    "@playwright/test": "1.24.0",
     "vite": "^3.0.0"
   }
 }
