--- a/.github/workflows/tests_primary.yml
+++ b/.github/workflows/tests_primary.yml
@@ -60,6 +60,7 @@ jobs:
     - run: node tests/config/checkCoverage.js ${{ matrix.browser }}
     - run: ./utils/upload_flakiness_dashboard.sh ./test-results/report.json
       if: always()
+      shell: bash
     - uses: actions/upload-artifact@v1
       if: always()
       with:
@@ -90,6 +91,7 @@ jobs:
         PWTEST_CHANNEL: chromium-tip-of-tree
     - run: ./utils/upload_flakiness_dashboard.sh ./test-results/report.json
       if: always()
+      shell: bash
     - uses: actions/upload-artifact@v1
       if: always()
       with:
