fix(cli): store trace/storage/har on SIGINT

--- a/packages/playwright-core/src/protocol/protocol.yml
+++ b/packages/playwright-core/src/protocol/protocol.yml
@@ -948,6 +948,7 @@ BrowserContext:
         device: string?
         saveStorage: string?
         outputFile: string?
+        doNotHandleSIGINT: boolean?
 
     newCDPSession:
       parameters:
