--- a/packages/playwright-core/src/protocol/protocol.yml
+++ b/packages/playwright-core/src/protocol/protocol.yml
@@ -948,7 +948,7 @@ BrowserContext:
         device: string?
         saveStorage: string?
         outputFile: string?
-        doNotHandleSIGINT: boolean?
+        handleSIGINT: boolean?
 
     newCDPSession:
       parameters:
