feat: introduce docker integration
This patch introduces the following commands:
- `npx playwright docker build` that builds a VRT docker image
  locally that is based off the `mcr.microsoft.com/playwright:jammy`
- `npx playwright docker start` that launches a docker container with
  browsers.
- `npx playwright docker stop` that stops given docker container.
- `npx playwright docker test` that runs all the tests inside a
  launched docker container.

--- a/packages/playwright-core/package.json
+++ b/packages/playwright-core/package.json
@@ -20,6 +20,7 @@
     },
     "./cli": "./cli.js",
     "./package.json": "./package.json",
+    "./lib/cli/docker": "./lib/cli/docker.js",
     "./lib/grid/gridServer": "./lib/grid/gridServer.js",
     "./lib/outofprocess": "./lib/outofprocess.js",
     "./lib/utils": "./lib/utils/index.js",
