--- a/packages/playwright-ct-react/package.json
+++ b/packages/playwright-ct-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@playwright/experimental-ct-react",
-  "version": "1.25.0-next",
+  "version": "1.25.0",
   "description": "Playwright Component Testing for React",
   "repository": "github:Microsoft/playwright",
   "homepage": "https://playwright.dev",
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^1.0.7",
-    "@playwright/test": "1.25.0-next",
+    "@playwright/test": "1.25.0",
     "vite": "^2.9.5"
   }
 }
