--- a/.github/workflows/tests_primary.yml
+++ b/.github/workflows/tests_primary.yml
@@ -176,7 +176,7 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node_version }}
-    - run: npm i -g npm@8.15.1 # This should NOT be pinned beyond major version once https://github.com/microsoft/playwright/issues/16281 is resolved.
+    - run: npm i -g npm@^8.17.0 # v8.16.0 does not work due to a regression in npm itself (https://github.com/microsoft/playwright/issues/16281)
     - run: npm ci
       env:
         DEBUG: pw:install
