--- a/packages/playwright-ct-solid/package.json
+++ b/packages/playwright-ct-solid/package.json
@@ -26,9 +26,10 @@
     }
   },
   "dependencies": {
+    "babel-preset-solid": "^1.4.8",
+    "vite": "^3.0.0",
     "vite-plugin-solid": "^2.3.0",
-    "@playwright/test": "1.26.0-next",
-    "vite": "^3.0.0"
+    "@playwright/test": "1.26.0-next"
   },
   "devDependencies": {
     "solid-js": "^1.4.7"
