added fps in recordVideo options

--- a/packages/playwright-core/src/protocol/protocol.yml
+++ b/packages/playwright-core/src/protocol/protocol.yml
@@ -460,6 +460,7 @@ ContextOptions:
       type: object?
       properties:
         dir: string
+        fps: number? 
         size:
           type: object?
           properties:
