--- a/packages/playwright-core/src/protocol/protocol.yml
+++ b/packages/playwright-core/src/protocol/protocol.yml
@@ -1984,6 +1984,7 @@ Frame:
           items: ExpectedTextValue
         expectedNumber: number?
         expectedValue: SerializedArgument?
+        expectedExistance: boolean?
         useInnerText: boolean?
         isNot: boolean
         timeout: number?
