--- a/.github/workflows/roll_driver_nodejs.yml
+++ b/.github/workflows/roll_driver_nodejs.yml
@@ -8,6 +8,7 @@ jobs:
   trigger-nodejs-roll:
     name: Trigger Roll
     runs-on: ubuntu-22.04
+    if: github.repository == 'microsoft/playwright'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
