feat(trace): include url into route.fulfill call params

--- a/packages/playwright-core/src/protocol/protocol.yml
+++ b/packages/playwright-core/src/protocol/protocol.yml
@@ -2551,6 +2551,8 @@ Route:
 
     fulfill:
       parameters:
+        # Used to discriminate between fulfills in tracing
+        url: string
         # default is 200
         status: number?
         headers:
