--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
-    "electron": "^19.0.11",
+    "electron": "19.0.11",
     "electron-to-chromium": "^1.4.212",
     "enquirer": "^2.3.6",
     "eslint": "^8.8.0",
