feat: added follow and redirect arguments to fetch

--- a/packages/playwright-core/src/protocol/protocol.yml
+++ b/packages/playwright-core/src/protocol/protocol.yml
@@ -284,6 +284,13 @@ APIRequestContext:
         timeout: number?
         failOnStatusCode: boolean?
         ignoreHTTPSErrors: boolean?
+        follow: number?
+        redirect: 
+          type: enum?
+          literals:
+          - error
+          - manual
+          - follow
       returns:
         response: APIResponse
 
