--- a/packages/playwright-core/src/protocol/protocol.yml
+++ b/packages/playwright-core/src/protocol/protocol.yml
@@ -284,13 +284,7 @@ APIRequestContext:
         timeout: number?
         failOnStatusCode: boolean?
         ignoreHTTPSErrors: boolean?
-        follow: number?
-        redirect: 
-          type: enum?
-          literals:
-          - error
-          - manual
-          - follow
+        maxRedirects: number?
       returns:
         response: APIResponse
 
