--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "wtest": "playwright test --config=tests/library/playwright.config.ts --project=webkit",
     "atest": "playwright test --config=tests/android/playwright.config.ts",
     "etest": "playwright test --config=tests/electron/playwright.config.ts",
+    "webview2test": "playwright test --config=tests/webview2/playwright.config.ts",
     "itest": "playwright test --config=tests/installation/playwright.config.ts",
     "stest": "playwright test --config=tests/stress/playwright.config.ts",
     "test-html-reporter": "playwright test --config=packages/html-reporter",
