--- a/packages/playwright-core/package.json
+++ b/packages/playwright-core/package.json
@@ -20,10 +20,10 @@
     },
     "./cli": "./cli.js",
     "./package.json": "./package.json",
-    "./lib/cli/docker": "./lib/cli/docker.js",
     "./lib/grid/gridServer": "./lib/grid/gridServer.js",
     "./lib/outofprocess": "./lib/outofprocess.js",
     "./lib/utils": "./lib/utils/index.js",
+    "./lib/common/userAgent": "./lib/common/userAgent.js",
     "./lib/utils/comparators": "./lib/utils/comparators.js",
     "./lib/utils/eventsHelper": "./lib/utils/eventsHelper.js",
     "./lib/utils/fileUtils": "./lib/utils/fileUtils.js",
