feat: added follow and redirect arguments to fetch (#17033)

--- a/packages/playwright-core/src/protocol/protocol.yml
+++ b/packages/playwright-core/src/protocol/protocol.yml
@@ -284,6 +284,7 @@ APIRequestContext:
         timeout: number?
         failOnStatusCode: boolean?
         ignoreHTTPSErrors: boolean?
+        maxRedirects: number?
       returns:
         response: APIResponse
 
