feat(ct): vue mount type

--- a/packages/playwright-ct-vue/package.json
+++ b/packages/playwright-ct-vue/package.json
@@ -25,9 +25,12 @@
       "default": "./hooks.mjs"
     }
   },
-  "dependencies": {
+  "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
     "@playwright/test": "1.26.0-next",
     "vite": "^2.9.5"
+  },
+  "dependencies": {
+    "vue": "^3.2.39"
   }
 }
