added tsconfig exclude

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
     "packages/html-reporter",
     "packages/playwright-ct-react",
     "packages/playwright-ct-solid",
+    "packages/playwright-ct-web",
     "packages/playwright-ct-svelte",
     "packages/playwright-ct-vue",
     "packages/recorder",
