--- a/packages/playwright-core/package.json
+++ b/packages/playwright-core/package.json
@@ -24,6 +24,7 @@
     "./lib/outofprocess": "./lib/outofprocess.js",
     "./lib/utils": "./lib/utils/index.js",
     "./lib/utils/comparators": "./lib/utils/comparators.js",
+    "./lib/common/userAgent": "./lib/common/userAgent.js",
     "./lib/utils/eventsHelper": "./lib/utils/eventsHelper.js",
     "./lib/utils/fileUtils": "./lib/utils/fileUtils.js",
     "./lib/utils/httpServer": "./lib/utils/httpServer.js",
