fix(docs): update contribution guide

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test-web": "playwright test --config=packages/web",
     "ttest": "node ./tests/playwright-test/stable-test-runner/node_modules/@playwright/test/cli test --config=tests/playwright-test/playwright.config.ts",
     "ct": "playwright test tests/components/test-all.spec.js --reporter=list",
-    "test": "playwright test --config=tests/library/playwright.config.ts",
+    "test": "node packages/playwright-core/lib/cli/cli.js test --config=tests/library/playwright.config.ts",
     "eslint": "eslint --ext ts,tsx .",
     "tsc": "tsc -p .",
     "build-installer": "babel -s --extensions \".ts\" --out-dir packages/playwright-core/lib/utils/ packages/playwright-core/src/utils",
