feat: locator.blur()
Note this is only available on Locator.

--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -1586,6 +1586,14 @@ Frame:
       tracing:
         snapshot: true
 
+    blur:
+      parameters:
+        selector: string
+        strict: boolean?
+        timeout: number?
+      tracing:
+        snapshot: true
+
     check:
       parameters:
         selector: string
