--- a/packages/playwright-ct-vue2/package.json
+++ b/packages/playwright-ct-vue2/package.json
@@ -27,10 +27,10 @@
   },
   "dependencies": {
     "@playwright/test": "1.28.0-next",
-    "vite": "^3.2.1",
-    "vite-plugin-vue2": "^2.0.2"
+    "@vitejs/plugin-vue2": "^2.0.0",
+    "vite": "^3.2.1"
   },
   "devDependencies": {
-    "vue": "^2.6.14"
+    "vue": "^2.7.13"
   }
 }
